--- a/demo/package.json
+++ b/demo/package.json
@@ -8,37 +8,43 @@
   },
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.1.0",
     "aurelia-animator-css": "^1.0.1",
+    "aurelia-bootstrapper": "^2.1.0",
+    "aurelia-fetch-client": "^1.1.1",
     "bluebird": "^3.4.1",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
     "requirejs": "^2.3.2",
-    "text": "github:requirejs/text#latest"
+    "text": "github:requirejs/text#latest",
+    "whatwg-fetch": "^2.0.2"
   },
   "peerDependencies": {},
   "devDependencies": {
+    "@types/jquery": "^3.2.11",
+    "@types/node": "^6.0.45",
     "aurelia-cli": "^0.27.0",
     "aurelia-testing": "^1.0.0-beta.2.0.1",
     "aurelia-tools": "^1.0.0",
     "browser-sync": "^2.13.0",
+    "font-awesome": "^4.7.0",
     "connect-history-api-fallback": "^1.2.0",
+    "event-stream": "^3.3.3",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-changed-in-place": "^2.0.3",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-notify": "^2.2.0",
+    "gulp-tslint": "^5.0.0",
+    "gulp-typescript": "^3.1.4",
+    "html-minifier": "^3.2.3",
     "minimatch": "^3.0.2",
     "through2": "^2.0.1",
-    "uglify-js": "^2.6.3",
-    "vinyl-fs": "^2.4.3",
-    "event-stream": "^3.3.3",
-    "gulp-typescript": "^3.1.4",
-    "gulp-tslint": "^5.0.0",
     "tslint": "^3.11.0",
     "typescript": ">=1.9.0-dev || ^2.0.0",
-    "@types/node": "^6.0.45",
-    "gulp-htmlmin": "^3.0.0",
-    "html-minifier": "^3.2.3",
-    "gulp-sass": "^2.3.2"
+    "uglify-js": "^2.6.3",
+    "vinyl-fs": "^2.4.3"
   }
 }
