--- a/demo/package.json
+++ b/demo/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "au-datatable": "^1.1.1",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.2.0",
     "aurelia-fetch-client": "^1.4.0",
