--- a/package.json
+++ b/package.json
@@ -1,129 +1,89 @@
 {
-    "name": "au-datatable",
-    "version": "1.2.2",
-    "description": "A highly customizable aurelia html datatable plugin",
-    "keywords": [
-        "aurelia",
-        "table",
-        "customizable",
-        "plugin",
-        "html",
-        "datatable"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/dtaalbers/au-datatable.git"
-    },
-    "author": "Tom Aalbers <dtaalbers@gmail.com>",
-    "license": "MIT",
-    "homepage": "https://github.com/dtaalbers/au-datatable",
-    "bugs": {
-        "url": "https://github.com/dtaalbers/au-datatable/issues"
-    },
-    "devDependencies": {
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.26.0",
-        "aurelia-cli": "^2.0.3",
-        "aurelia-testing": "^1.0.0",
-        "gulp": "^4.0.2",
-        "gulp-eslint": "^6.0.0",
-        "minimatch": "^3.0.4",
-        "promise-polyfill": "^8.2.0",
-        "aurelia-bootstrapper": "^2.3.3",
-        "aurelia-animator-css": "^1.0.4",
-        "typescript": "^4.2.4",
-        "@types/node": "^15.0.3",
-        "@typescript-eslint/eslint-plugin": "^4.23.0",
-        "@typescript-eslint/parser": "^4.23.0",
-        "gulp-sourcemaps": "^3.0.0",
-        "del": "^6.0.0",
-        "requirejs": "^2.3.6",
-        "text": "requirejs/text",
-        "gulp-typescript": "^6.0.0-alpha.1",
-        "gulp-postcss": "^9.0.0",
-        "postcss": "^8.2.15",
-        "autoprefixer": "^10.2.5",
-        "cssnano": "^5.0.2",
-        "postcss-url": "^10.1.3",
-        "gulp-dart-sass": "^1.0.2",
-        "node-sass-package-importer": "^5.3.2",
-        "gulp-htmlmin": "^5.0.1",
-        "connect": "^3.7.0",
-        "connect-history-api-fallback": "^1.6.0",
-        "connect-injector": "^0.4.4",
-        "serve-static": "^1.14.1",
-        "socket.io": "^4.1.1",
-        "open": "^8.0.8",
-        "server-destroy": "^1.0.1",
-        "debounce": "^1.2.1",
-        "gulp-plumber": "^1.2.1",
-        "gulp-rename": "^2.0.0",
-        "gulp-watch": "^5.0.1",
-        "gulp-if": "^3.0.0",
-        "jest": "^26.6.3",
-        "jest-cli": "^26.6.3",
-        "jest-transform-stub": "^2.0.0",
-        "aurelia-loader-nodejs": "^1.1.0",
-        "aurelia-pal-nodejs": "^2.0.0",
-        "ts-jest": "^26.5.6",
-        "@types/jest": "^26.0.23"
-    },
-    "browserslist": [
-        "defaults"
-    ],
-    "scripts": {
-        "build": "au build-plugin --env prod",
-        "start": "au run",
-        "watch": "au build-plugin --watch",
-        "prepare": "npm run build",
-        "pretest": "au lint",
-        "preversion": "au test",
-        "test": "au test"
-    },
-    "engines": {
-        "node": ">=10.12.0"
-    },
-    "main": "dist/commonjs/index.js",
-    "module": "dist/native-modules/index.js",
-    "files": [
-        "dist"
-    ],
-    "jest": {
-        "moduleNameMapper": {
-            "^aurelia-binding$": "<rootDir>/node_modules/aurelia-binding",
-            "^.+\\.css$": "<rootDir>/test/mock-css"
-        },
-        "modulePaths": [
-            "<rootDir>/src",
-            "<rootDir>/node_modules"
-        ],
-        "moduleFileExtensions": [
-            "ts",
-            "js",
-            "json"
-        ],
-        "transform": {
-            "^.+\\.(css|less|sass|scss|styl|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "jest-transform-stub",
-            "^.+\\.ts$": "ts-jest"
-        },
-        "testRegex": "\\.spec\\.(ts|js)$",
-        "setupFiles": [
-            "<rootDir>/test/jest-pretest.ts"
-        ],
-        "testEnvironment": "node",
-        "collectCoverage": true,
-        "collectCoverageFrom": [
-            "src/**/*.{js,ts}",
-            "!**/*.spec.{js,ts}",
-            "!**/node_modules/**",
-            "!**/test/**"
-        ],
-        "coverageDirectory": "<rootDir>/test/coverage-jest",
-        "coverageReporters": [
-            "json",
-            "lcov",
-            "text",
-            "html"
-        ]
-    }
+  "name": "au-datatable",
+  "version": "1.2.2",
+  "description": "A highly customizable aurelia html datatable plugin",
+  "keywords": [
+    "aurelia",
+    "table",
+    "customizable",
+    "plugin",
+    "html",
+    "datatable"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dtaalbers/au-datatable.git"
+  },
+  "author": "Tom Aalbers <dtaalbers@gmail.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/dtaalbers/au-datatable",
+  "bugs": {
+    "url": "https://github.com/dtaalbers/au-datatable/issues"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "aurelia-animator-css": "^1.0.4",
+    "aurelia-bootstrapper": "^2.4.0",
+    "aurelia-cli": "^3.0.1",
+    "aurelia-testing": "^1.1.0",
+    "autoprefixer": "^10.4.13",
+    "connect": "^3.7.0",
+    "connect-history-api-fallback": "^2.0.0",
+    "connect-injector": "^0.4.4",
+    "cssnano": "^5.1.14",
+    "debounce": "^1.2.1",
+    "del": "^6.1.0",
+    "eslint": "^8.30.0",
+    "gulp": "^4.0.2",
+    "gulp-dart-sass": "^1.0.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-watch": "^5.0.1",
+    "minimatch": "^5.1.2",
+    "node-sass-package-importer": "^5.3.2",
+    "open": "^8.4.0",
+    "postcss": "^8.4.20",
+    "postcss-url": "^10.1.3",
+    "promise-polyfill": "^8.2.3",
+    "requirejs": "^2.3.6",
+    "serve-static": "^1.15.0",
+    "server-destroy": "^1.0.1",
+    "socket.io": "^4.5.4",
+    "text": "requirejs/text",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4"
+  },
+  "browserslist": [
+    "defaults"
+  ],
+  "scripts": {
+    "build": "au build-plugin --env prod",
+    "start": "au run",
+    "watch": "au build-plugin --watch",
+    "prepare": "npm run build"
+  },
+  "engines": {
+    "node": ">=14.15.0"
+  },
+  "overrides": {
+    "chokidar": "^3.0.0",
+    "glob-stream": "^7.0.0",
+    "glob-parent": "^6.0.0",
+    "micromatch": "^4.0.0"
+  },
+  "main": "dist/commonjs/index.js",
+  "module": "dist/native-modules/index.js",
+  "private": true,
+  "files": [
+    "dist",
+    "src"
+  ]
 }
