chore(config): Removed private mark

--- a/package.json
+++ b/package.json
@@ -81,9 +81,7 @@
   },
   "main": "dist/commonjs/index.js",
   "module": "dist/native-modules/index.js",
-  "private": true,
   "files": [
-    "dist",
-    "src"
+    "dist"
   ]
 }
