--- a/package.json
+++ b/package.json
@@ -1,87 +1,67 @@
 {
-  "name": "au-datatable",
-  "version": "1.2.3",
-  "description": "A highly customizable aurelia html datatable plugin",
-  "keywords": [
-    "aurelia",
-    "table",
-    "customizable",
-    "plugin",
-    "html",
-    "datatable"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dtaalbers/au-datatable.git"
-  },
-  "author": "Tom Aalbers <dtaalbers@gmail.com>",
-  "license": "MIT",
-  "homepage": "https://github.com/dtaalbers/au-datatable",
-  "bugs": {
-    "url": "https://github.com/dtaalbers/au-datatable/issues"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "aurelia-animator-css": "^1.0.4",
-    "aurelia-bootstrapper": "^2.4.0",
-    "aurelia-cli": "^3.0.1",
-    "aurelia-testing": "^1.1.0",
-    "autoprefixer": "^10.4.13",
-    "connect": "^3.7.0",
-    "connect-history-api-fallback": "^2.0.0",
-    "connect-injector": "^0.4.4",
-    "cssnano": "^5.1.14",
-    "debounce": "^1.2.1",
-    "del": "^6.1.0",
-    "eslint": "^8.30.0",
-    "gulp": "^4.0.2",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-eslint": "^6.0.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-if": "^3.0.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-watch": "^5.0.1",
-    "minimatch": "^5.1.2",
-    "node-sass-package-importer": "^5.3.2",
-    "open": "^8.4.0",
-    "postcss": "^8.4.20",
-    "postcss-url": "^10.1.3",
-    "promise-polyfill": "^8.2.3",
-    "requirejs": "^2.3.6",
-    "serve-static": "^1.15.0",
-    "server-destroy": "^1.0.1",
-    "socket.io": "^4.5.4",
-    "text": "requirejs/text",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
-  },
-  "browserslist": [
-    "defaults"
-  ],
-  "scripts": {
-    "build": "au build-plugin --env prod",
-    "start": "au run",
-    "watch": "au build-plugin --watch",
-    "prepare": "npm run build"
-  },
-  "engines": {
-    "node": ">=14.15.0"
-  },
-  "overrides": {
-    "chokidar": "^3.0.0",
-    "glob-stream": "^7.0.0",
-    "glob-parent": "^6.0.0",
-    "micromatch": "^4.0.0"
-  },
-  "main": "dist/commonjs/index.js",
-  "module": "dist/native-modules/index.js",
-  "files": [
-    "dist"
-  ]
+    "name": "au-datatable",
+    "version": "1.2.3",
+    "description": "A highly customizable aurelia html datatable plugin",
+    "keywords": [
+        "aurelia",
+        "table",
+        "customizable",
+        "plugin",
+        "html",
+        "datatable"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dtaalbers/au-datatable.git"
+    },
+    "author": "Tom Aalbers <dtaalbers@gmail.com>",
+    "license": "MIT",
+    "homepage": "https://github.com/dtaalbers/au-datatable",
+    "bugs": {
+        "url": "https://github.com/dtaalbers/au-datatable/issues"
+    },
+    "files": [
+        "dist"
+    ],
+    "dependencies": {
+        "aurelia": "latest"
+    },
+    "devDependencies": {
+        "eslint": "^8.30.0",
+        "@aurelia/testing": "latest",
+        "htmlhint": "^1.1.4",
+        "sass-lint": "^1.13.1",
+        "rimraf": "^3.0.2",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1",
+        "html-webpack-plugin": "^5.5.0",
+        "webpack-bundle-analyzer": "^4.7.0",
+        "style-loader": "^3.3.1",
+        "css-loader": "^6.7.3",
+        "dotenv-webpack": "^8.0.1",
+        "@aurelia/webpack-loader": "latest",
+        "ts-loader": "^9.4.2",
+        "sass-loader": "^13.2.0",
+        "sass": "^1.57.1",
+        "postcss-loader": "^7.0.2",
+        "postcss": "^8.4.20",
+        "autoprefixer": "^10.4.13",
+        "webpack-node-externals": "^3.0.0",
+        "@types/node": "^18.11.18",
+        "typescript": "^4.9.4",
+        "tslib": "^2.4.1",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1"
+    },
+    "scripts": {
+        "lint:js": "eslint src test --ext .js,.ts",
+        "lint:css": "sass-lint -c .sass-lint.yml \"src/**/*.scss\"",
+        "lint:html": "htmlhint -c .htmlhintrc src",
+        "lint": "npm run lint:js && npm run lint:html && npm run lint:css",
+        "start": "webpack serve",
+        "build": "rimraf dist && webpack --env production",
+        "analyze": "rimraf dist && webpack --env production --analyze",
+        "prepare": "npm run build"
+    }
 }
