--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,20 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "declaration": true,
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true,
-    "target": "es5",
-    "lib": [
-      "es2015",
-      "dom"
-    ],
+    "module": "esnext",
     "moduleResolution": "node",
-    "baseUrl": "src",
+    "skipLibCheck": true,
+    "target": "ES2017",
+    "esModuleInterop": true,
     "resolveJsonModule": true,
-    "paths": {
-      "resources": [
-        ""
-      ]
-    },
-    "allowJs": false
+    "importHelpers": true,
+    "sourceMap": true
   },
   "include": [
-    "src",
-    "dev-app",
-    "test"
+    "src"
   ],
-  "atom": {
-    "rewriteTsconfig": false
-  }
+  "files": [
+    "src/resource.d.ts"
+  ]
 }
